--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,2 @@
 
-out/production/Builder/BuilderLunchOrderDemo.class
-
-out/production/Builder/LunchOrder.class
-
-out/production/Builder/LunchOrder$1.class
-
-out/production/Builder/LunchOrder$Builder.class
-
-out/production/Singleton/MainTestClass.class
-
-out/production/Singleton/Singleton.class
-
-out/production/Singleton/Singleton$1.class
-
-out/production/Singleton/Singleton$SingletonHolder.class
+out/
